<resources>
    <string name="app_name">Viagens</string>
    <string name="especials">Especiais</string>
    <string name="country">Brasil</string>
    <string name="banner">Banner</string>
    <string name="trip_image">Imagem do local</string>
    <string name="summary_button_paymentString">Realizar Pagamento</string>
    <string name="summary_activity_title">Resumo do Pacote</string>
    <string name="trip_summary_image">Trip Image</string>
    <string name="payment_instructions">Digite as informações do cartão de crédito que você deseja utilizar para o pagamento</string>
    <string name="payment_finalize_button_text">FINALIZAR COMPRA</string>
    <string name="payment_activity_title">Pagamento</string>
    <string name="payment_price_text">Valor da Compra</string>
    <string name="card_name_mask">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ</string>
    <string name="transaction_summary_title">Resumo da compra</string>
    <string name="trip_key">trip</string>
</resources>