<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ui.activity.PaymentActivity">

    <TextView
        android:id="@+id/payment_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/payment_instructions"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/payment_price_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_description" />

    <TextView
        android:id="@+id/payment_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="R$ 423,99" />

    <EditText
        android:id="@+id/payment_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="Número do cartão"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/payment_price"
        app:layout_constraintTop_toBottomOf="@+id/payment_price" />

    <EditText
        android:id="@+id/payment_card_month"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="MM"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="@+id/payment_card_number"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_number"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/payment_card_year"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="AA"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_card_month"
        app:layout_constraintStart_toEndOf="@+id/payment_card_month"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/payment_card_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="CVC"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_card_month"
        app:layout_constraintEnd_toEndOf="@+id/payment_card_number" />

    <EditText
        android:id="@+id/payment_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="@string/card_name_mask"
        android:hint="Nome no cartão"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/payment_card_cvc"
        app:layout_constraintStart_toStartOf="@+id/payment_card_month"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_month"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/payment_confirm_button"
        style="@style/buttonstyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/payment_finalize_button_text"
        app:layout_constraintEnd_toEndOf="@+id/payment_card_name"
        app:layout_constraintStart_toStartOf="@+id/payment_card_name"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_name" />


</androidx.constraintlayout.widget.ConstraintLayout>